blog feed page template
- implemented html and css
- added javascript for carousel
- added mock up contents waiting to be implemented with API

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+/*banner starts here*/
+
 .banner {
     background: url("https://i.imgur.com/veCq7eO.jpeg") no-repeat left/cover;
     width: 100%;
@@ -45,41 +47,9 @@
     font-size: 20px;
 }
 
-.header {
-    height: 73px;
-    margin: 20px;
-    border: 1px solid rgba(0, 0, 0, 0.20);
-    background: #FFFEF6;
-    box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.25);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-}
+/*banner ends here*/
 
-nav a {
-    text-decoration: none;
-    color: black;
-    font-family: "Bebas Neue", sans-serif;
-}
-
-nav {
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    gap: 40px;
-}
-
-.search {
-    display: flex;
-    gap: 8px;
-    align-items: center;
-}
-
-#search-input {
-    outline: none;
-    border-radius: 16px;
-}
+/*top container starts here*/
 
 .top-container {
     display: flex;
@@ -105,6 +75,7 @@ nav {
     font-family: "bitter", sans-serif;
     text-indent: 80px;
     font-size: 16px;
+    line-height: 25px;
 }
 
 .social-media {
@@ -112,6 +83,15 @@ nav {
     justify-content: center;
     align-items: center;
     gap: 16px;
+}
+
+/*top container ends here*/
+
+/*carousel starts here*/
+
+.carousel-container h3 {
+    font-family: beau rivage, sans-serif;
+    font-size: 40px;
 }
 
 .carousel-container {
@@ -124,18 +104,173 @@ nav {
 .carousel {
     height: 390px;
     width: 100%;
-    background: bisque;
     margin: 20px;
+    position: relative;
 }
 
-.carousel-container h3 {
-    font-family: "Bebas Neue", sans-serif;
+.slide {
+    position: absolute;
     width: 100%;
+    height: 100%;
+    background: aqua;
+    left: 0;
+    cursor: pointer;
+    opacity: 0;
+    transition: 300ms opacity ease-in-out;
+    transition-delay: 300ms;
+}
+
+.active {
+    opacity: 1;
+    z-index: 1;
+    transition-delay: 0ms;
+}
+
+.slide-overlay {
+    background: linear-gradient(360deg, #222 2.02%, rgba(34, 34, 34, 0.00) 97.98%);
+    height: 30%;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
+
+.slide-title {
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 20px;
+    padding-top: 20px;
+    padding-left: 20px;
+    color: white;
+}
+
+.slide-text {
+    font-family: "bitter", sans-serif;
+    font-size: 14px;
+    padding-left: 20px;
+    padding-top: 10px;
+    color: white;
+}
+
+.arrow-container {
+    display: flex;
+    gap: 80px;
+}
+
+.arrow-btn {
+    height: 45px;
+    width: 50px;
+    padding: 0;
+}
+
+/*carousel ends here*/
+
+/*highlights and main content starts here*/
+
+.contents {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+.highlight {
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+    align-items: center;
+    margin-left: 40px;
+    padding-right: 40px;
+    border-right: solid 1px black;
+}
+
+.highlight h3 {
+    font-family: beau rivage, sans-serif;
+    font-size: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.highlight-content {
+    display: flex;
+    flex-direction: column;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.highlight-content h4 {
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 16px;
+}
+
+.highlight-thumbnail {
+    background: aqua;
+    border-radius: 50%;
+    width: 225px;
+    height: 225px;
+    cursor: pointer;
+}
+
+.main-contents h3 {
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.arrow-container {
-    display: flex;
+.main-contents-display {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    justify-items: center;
+    align-items: center;
 }
+
+.main-contents-container {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    text-decoration: none;
+    justify-items: center;
+    align-items: center;
+}
+
+.main-contents-thumbnail {
+    width: 225px;
+    height: 225px;
+    background: bisque;
+    position: relative;
+}
+
+.main-contents-overlay {
+    background: linear-gradient(360deg, #222 2.02%, rgba(34, 34, 34, 0.00) 97.98%);
+    height: 30%;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
+
+.main-contents-thumbnail h4 {
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30%;
+    width: 100%;
+    color: white;
+    font-family: "Bebas Neue", sans-serif;
+}
+
+.main-contents-container p {
+    font-family: "bitter", sans-serif;
+    font-size: 14px;
+    color: black;
+    padding-top: 16px;
+    width: 225px;
+}
+
+/*main contents end here*/
