--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,8 @@ body {
     background: #FFFEF6;
 }
 
+/*components start here*/
+
 button {
     display: flex;
     padding: 10px 40px;
@@ -32,7 +34,7 @@ button {
 .btn-black {
     color: black;
     border: 1px solid black;
-    background-color: rgba(0, 0, 0, 1);
+    background-color: transparent;
 }
 
 .btn-black:hover {
@@ -61,3 +63,111 @@ button {
     background: black;
     color: white;
 }
+
+/*components end here*/
+
+/*nav starts here*/
+
+.header,
+footer {
+    height: 73px;
+    margin: 20px;
+    border: 1px solid rgba(0, 0, 0, 0.20);
+    background: #FFFEF6;
+    box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.25);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+}
+
+nav a {
+    text-decoration: none;
+    color: black;
+    font-family: "Bebas Neue", sans-serif;
+}
+
+nav {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    gap: 40px;
+}
+
+.search {
+    display: flex;
+    gap: 8px;
+    align-items: center;
+}
+
+#search-input {
+    outline: none;
+    border-radius: 16px;
+}
+
+/*nav ends here*/
+
+/*footer starts here*/
+
+footer {
+    height: fit-content;
+    display: grid;
+    grid-template-areas:
+    'logo subscribe social-media'
+    'copyright copyright copyright'
+    ;
+}
+
+.logo-footer {
+    grid-area: logo;
+    margin: 20px;
+}
+
+.subscribe-footer {
+    grid-area: subscribe;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
+#email-input-label {
+    font-family: "bitter", sans-serif;
+    font-size: 14px;
+}
+
+.social-media-footer {
+    grid-area: social-media;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    padding: 20px;
+}
+
+.social-media-footer h4 {
+    font-family: "bitter", sans-serif;
+    font-size: 14px;
+}
+
+.social-media-icon-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+}
+
+.copyright {
+    grid-area: copyright;
+    font-family: "bitter", sans-serif;
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+
+
