--- a/css/login-register.css
+++ b/css/login-register.css
@@ -8,7 +8,7 @@ body {
     justify-content: center;
 }
 
-#login-form {
+#form {
     border-radius: 16px;
     background: #FFFEF6;
     box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.25);
@@ -20,14 +20,16 @@ body {
     gap: 20px;
 }
 
-.login-header {
+.login-header,
+.register-header {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 8px;
 }
 
-.login-header > h2 {
+.login-header > h2,
+.register-header > h2{
     font-family: "Bebas Neue", sans-serif;
     display: flex;
     justify-content: center;
@@ -39,22 +41,46 @@ label {
 }
 
 input {
-    width: 300px;
+    width: 250px;
     outline: none;
     border-radius: 8px;
     height: 30px;
     padding: 4px;
 }
 
+textarea {
+    width: 250px;
+    outline: none;
+    border-radius: 8px;
+}
+
 .email,
-.password {
+.username,
+.password,
+.repeat-password,
+.avatar,
+.bio {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
+#bio {
+    height: 100px;
+}
+
 #login-btn {
     margin-top: 20px;
+    border-radius: 8px;
+}
+
+.register {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 8px;
+    font-family: "bitter", sans-serif;
+    font-size: 12px;
 }
 
 #message {
