--- a/css/login-register.css
+++ b/css/login-register.css
@@ -87,3 +87,30 @@ textarea {
     color: red;
 }
 
+.successful {
+    display: none;
+    width: 300px;
+    height: 150px;
+    background: #FFFEF6;
+    border-radius: 16px;
+    box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.25);
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: "bitter", sans-serif;
+    gap: 20px;
+    position: absolute;
+    z-index: 2;
+}
+
+.overlay {
+    display: none;
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    background: rgba(0, 0, 0, 0.25);
+    height: 100vh;
+    width: 100vw;
+}
+
