--- a/css/index.css
+++ b/css/index.css
@@ -245,8 +245,9 @@
 
 .main-contents-display {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(4, auto);
+    grid-template-rows: auto;
+    width: 100%;
     justify-items: center;
     align-items: center;
 }
@@ -258,6 +259,9 @@
     text-decoration: none;
     justify-items: center;
     align-items: center;
+    height: 370px;
+    box-shadow: 4px 4px 6px 4px rgba(0, 0, 0, 0.25);
+    margin: 20px;
 }
 
 .main-contents-thumbnail {
@@ -265,6 +269,7 @@
     height: 225px;
     background: bisque;
     position: relative;
+    margin-bottom: 16px;
 }
 
 .main-contents-overlay {
@@ -287,12 +292,15 @@
     font-family: "Bebas Neue", sans-serif;
 }
 
-.main-contents-container p {
+.main-contents-container > p {
     font-family: "bitter", sans-serif;
     font-size: 14px;
     color: black;
-    padding-top: 16px;
     width: 225px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    height: 20%;
 }
 
 /*main contents end here*/
