--- a/css/post-public.css
+++ b/css/post-public.css
@@ -1,20 +1,21 @@
 main {
     display: flex;
     justify-content: center;
+    width: 100%;
 }
 
 .main-content {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: 40px;
+    margin-right: 100px;
 }
 
 .side-contents {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 90%;
+    width: 20%;
     padding: 40px;
 }
 
