--- a/css/admin-bg-header.css
+++ b/css/admin-bg-header.css
@@ -1,13 +1,8 @@
-body {
-    background: url("https://i.imgur.com/TTc86MJ.jpeg") no-repeat 0 0/cover;
-    min-height: 100vh;
-    object-fit: cover;
-}
-
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .admin {
@@ -47,4 +42,31 @@ main {
 #logout-btn i {
     font-size: 20px;
     margin-left: 10px;
+}
+
+#logout-box {
+    position: absolute;
+    z-index: 2;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 200px;
+    width: 300px;
+    background: #FFFEF6;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    border-radius: 16px;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: "Bebas Neue", sans-serif;
+    gap: 20px;
+    margin: auto;
+}
+
+.yes-no-btns-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    align-items: center;
 }
