--- a/css/admin-bg-header.css
+++ b/css/admin-bg-header.css
@@ -70,3 +70,13 @@ main {
     gap: 20px;
     align-items: center;
 }
+
+#overlay {
+    display: none;
+    z-index: 1;
+    position: fixed;
+    top: 0;
+    background: rgba(0, 0, 0, 0.25);
+    height: 100vh;
+    width: 100vw;
+}
