--- a/css/admin.css
+++ b/css/admin.css
@@ -29,12 +29,10 @@ h1 {
     width: 80%;
     max-width: 800px;
     grid-template-columns: 1fr 2fr 0.5fr;
-}
-
-.img-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    border-radius: 8px;
+    box-shadow: 4px 4px 6px 4px rgba(0, 0, 0, 0.25);
+    padding: 20px;
+    margin: 20px;
 }
 
 .img {
@@ -67,16 +65,48 @@ h1 {
     justify-content: flex-start;
 }
 
-.edit-delete-btns {
+.btns-container {
     padding: 20px;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    justify-content: space-between;
 }
 
-#edit-btn,
-#delete-btn {
-    width: 50px;
+.edit-btn,
+.delete-btn,
+.view-post-btn {
+    width: 80px;
+    padding: 4px;
+}
+
+#delete-dialog {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    width: 300px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    background: white;
+    padding: 20px;
+    gap: 20px;
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 16px;
+    text-align: center;
+    box-shadow: 2px 4px 6px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 16px;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+}
+
+.delete-btns-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 40px;
 }
 
 
