--- a/css/index.css
+++ b/css/index.css
@@ -303,4 +303,14 @@
     height: 20%;
 }
 
+#pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 40px;
+    margin-top: 40px;
+}
+
+
 /*main contents end here*/
