--- a/css/admin.css
+++ b/css/admin.css
@@ -109,5 +109,15 @@ h1 {
     gap: 40px;
 }
 
+#pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 40px;
+    margin: 40px;
+}
+
+
 
 
