--- a/css/admin.css
+++ b/css/admin.css
@@ -1,8 +1,15 @@
 .buttons {
     display: flex;
     width: 100%;
+    height: 38px;
     justify-content: center;
+    margin: 20px;
     gap: 20px;
+}
+
+#post-new {
+    height: 38px;
+    margin: 0;
 }
 
 .search {
@@ -121,31 +128,40 @@ h1 {
 
 /*filter dropdown*/
 
-.filter-dropdown {
+#filter-dropdown {
+    display: none;
     border: 1px solid black;
     background-color: white;
     list-style-type: none;
-    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
     gap: 8px;
+    padding: 0;
+    z-index: 2;
+    width: 120px;
+}
+
+#filter-dropdown li {
+    width: 100%;
+    height: 30px;
     padding: 0;
 }
 
-.filter-dropdown li {
+.filter-btn {
     cursor: pointer;
     font-family: "Bebas Neue", sans-serif;
     font-size: 14px;
     width: 100%;
     height: 100%;
     display: flex;
-    padding: 4px;
+    padding: 0;
     justify-content: center;
     align-items: center;
 }
 
-.filter-dropdown li:hover {
+.filter-btn:hover {
     background: black;
     color: white;
 }
