--- a/css/styles.css
+++ b/css/styles.css
@@ -101,6 +101,69 @@ nav {
 
 /*nav ends here*/
 
+/*posts Elements start here*/
+.main-contents-container {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    text-decoration: none;
+    justify-items: center;
+    align-items: center;
+    height: 400px;
+    box-shadow: 4px 4px 6px 4px rgba(0, 0, 0, 0.25);
+    margin: 20px;
+    background: white;
+}
+
+.main-contents-thumbnail {
+    width: 225px;
+    height: 225px;
+    background: bisque;
+    position: relative;
+    margin-bottom: 16px;
+}
+
+.main-contents-overlay {
+    background: linear-gradient(360deg, #222 2.02%, rgba(34, 34, 34, 0.00) 97.98%);
+    height: 30%;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
+
+.main-contents-thumbnail h4 {
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30%;
+    width: 100%;
+    color: white;
+    font-family: "Bebas Neue", sans-serif;
+}
+
+.main-contents-container > p {
+    font-family: "bitter", sans-serif;
+    font-size: 14px;
+    color: black;
+    width: 225px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    height: 20%;
+}
+
+.read-more {
+    margin: auto;
+    width: 100%;
+    height: 10%;
+    display: flex;
+    align-items: center;
+}
+
+/*posts Elements end here*/
+
 /*footer starts here*/
 
 footer {
