--- a/css/single-post.css
+++ b/css/single-post.css
@@ -1,3 +1,14 @@
+.search {
+    display: flex;
+    justify-content: flex-end;
+    gap: 8px;
+}
+
+#search-input {
+    width: 70%;
+    border-radius: 8px;
+}
+
 main {
     display: flex;
     justify-content: center;
@@ -8,7 +19,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-right: 100px;
+    margin: 0 80px;
 }
 
 .side-contents {
@@ -16,7 +27,8 @@ main {
     flex-direction: column;
     align-items: center;
     width: 20%;
-    padding: 40px;
+    padding: 20px;
+    margin-right: 20px;
 }
 
 .blog-display {
@@ -195,6 +207,8 @@ main {
 
 .author {
     display: grid;
+    border-bottom: 1px solid black;
+    margin-bottom: 20px;
     grid-template-columns: 1fr 3fr;
     grid-template-rows: 1fr 0.5fr;
     grid-template-areas:
@@ -216,6 +230,7 @@ main {
 
 .author-detail {
     grid-area: detail;
+    align-content: center;
 }
 
 .author-name {
@@ -224,23 +239,18 @@ main {
     padding-bottom: 10px;
 }
 
-.bio {
-    font-family: "bitter", sans-serif;
-    font-size: 14px;
-}
-
 .social-media {
     grid-area: social-media;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 40px;
 }
 
 .related-contents {
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
 }
 
 .related-contents h3 {
@@ -249,6 +259,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 20px;
 }
 
 
@@ -256,25 +267,62 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 40px;
-    margin-bottom: 40px;
-}
-
-.related-content h4 {
+    gap: 20px;
     font-family: "Bebas Neue", sans-serif;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 16px;
+    font-size: 14px;
 }
 
 .related-thumbnail {
     background: aqua;
     border-radius: 50%;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     cursor: pointer;
+}
+
+@media (max-width: 666px) {
+
+    main {
+        flex-direction: column;
+    }
+
+    .side-contents {
+        width: 100%;
+    }
+
+    .related-content {
+        flex-direction: row;
+    }
+
+    .related-content h2 {
+        display: none;
+    }
+
+    .related-thumbnail {
+        width: 100px;
+        height: 100px;
+    }
+
+    .direction > p {
+        font-size: 12px;
+    }
+
+    .author {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .recipe-detail {
+        flex-direction: column;
+    }
+
+    .recipe-right-column {
+        margin-top: 20px;
+    }
+
+    .avatar {
+        display: flex;
+        align-items: center;
+    }
 }
 
 
