--- a/css/admin.css
+++ b/css/admin.css
@@ -1,24 +1,14 @@
 .buttons {
     display: flex;
-    width: 100%;
-    height: 38px;
+    width: 100vw;
     justify-content: center;
-    margin: 20px;
+    padding: 20px;
     gap: 20px;
 }
 
 #post-new {
     height: 38px;
     margin: 0;
-}
-
-.search {
-    margin-left: 40px;
-}
-
-#search-input {
-    height: 30px;
-    padding: 10px;
 }
 
 h1 {
@@ -39,7 +29,7 @@ h1 {
     border-radius: 8px;
     box-shadow: 4px 4px 6px 4px rgba(0, 0, 0, 0.25);
     padding: 20px;
-    margin: 20px;
+    margin: 20px auto;
 }
 
 .img {
@@ -122,9 +112,9 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 100vw;
     gap: 40px;
-    margin: 40px;
+    margin: 40px 0;
 }
 
 /*filter dropdown*/
@@ -165,4 +155,37 @@ h1 {
 .filter-btn:hover {
     background: black;
     color: white;
+}
+
+.search {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-left: 40px;
+}
+
+.search input {
+    height: 30px;
+}
+
+
+@media (max-width: 649px) {
+    .buttons {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .post {
+        width: 90%;
+        grid-template-columns: 0.5fr 1fr;
+        grid-template-areas:
+        'img details'
+        'btns btns'
+    }
+
+    .btns-container {
+        grid-area: btns;
+        flex-direction: row;
+    }
 }
