--- a/css/new-post.css
+++ b/css/new-post.css
@@ -18,7 +18,9 @@ h2 {
 #blog-post-form {
     display: flex;
     flex-direction: column;
-    margin: 0 20px 20px 20px;
+    margin: auto;
+    padding: 20px;
+    max-width: 800px;
 }
 
 label {
@@ -38,7 +40,7 @@ label {
 
 input {
     height: 30px;
-    width: 400px;
+    width: 300px;
     border-radius: 8px;
     padding: 4px;
     outline: none;
