--- a/css/login-register.css
+++ b/css/login-register.css
@@ -12,8 +12,8 @@ body {
     border-radius: 16px;
     background: #FFFEF6;
     box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.25);
-    width: 50%;
-    max-width: 450px;
+    width: 500px;
+    max-width: 80%;
     padding: 40px;
     display: flex;
     flex-direction: column;
