--- a/css/index.css
+++ b/css/index.css
@@ -185,7 +185,7 @@
 .highlight {
     display: flex;
     flex-direction: column;
-    width: 300px;
+    width: 25%;
     align-items: center;
     padding-left: 40px;
     padding-right: 40px;
@@ -247,11 +247,10 @@
 
 .main-contents-display {
     display: grid;
-    grid-template-columns: repeat(3, auto);
+    grid-template-columns: repeat(4, auto);
     grid-template-rows: auto;
     width: 100%;
     justify-items: center;
-    align-items: center;
 }
 
 #pagination {
@@ -268,6 +267,12 @@
 }
 
 /*main contents end here*/
+
+@media (max-width: 1400px) {
+    .main-contents-display {
+        grid-template-columns: repeat(2, auto);
+    }
+}
 
 @media (max-width: 1170px) {
     .contents {
@@ -315,9 +320,10 @@
 @media (max-width: 607px) {
 
     .main-contents-display {
-        display: block;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         width: 80%;
-
     }
 
     .main-contents-thumbnail {
