--- a/css/new-post.css
+++ b/css/new-post.css
@@ -1,9 +1,5 @@
-.back-to-admin-btn-container {
-    display: flex;
-    justify-content: flex-start;
-    width:100%;
+#back-to-admin {
     margin-left: 40px;
-    margin-top: 40px;
 }
 
 h2 {
@@ -15,12 +11,14 @@ h2 {
     margin-bottom: 40px;
 }
 
-#blog-post-form {
+#blog-post-form,
+#edit-form {
     display: flex;
     flex-direction: column;
     margin: auto;
     padding: 20px;
-    max-width: 800px;
+    width: 1000px;
+    max-width: 80%;
 }
 
 label {
@@ -40,7 +38,7 @@ label {
 
 input {
     height: 30px;
-    width: 300px;
+    min-width: 80%;
     border-radius: 8px;
     padding: 4px;
     outline: none;
@@ -67,7 +65,7 @@ textarea {
 }
 
 #preview {
-    position: absolute;
+    position: fixed;
     width: 80%;
     height: auto;
     display: none;
@@ -81,6 +79,9 @@ textarea {
     border-radius: 8px;
     z-index: 2;
     background: white;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 #preview-img {
@@ -106,8 +107,7 @@ textarea {
 
 #post-success {
     display: none;
-    position: absolute;
-    top: 30%;
+    position: fixed;
     z-index: 2;
     background: #FFFEF6;
     border: 1px solid black;
@@ -119,7 +119,20 @@ textarea {
     align-items: center;
     gap: 40px;
     box-shadow: 4px 4px 4px 0 rgba(0, 0, 0, 0.25);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
+}
+
+.overlay {
+    display: none;
+    z-index: 1;
+    position: fixed;
+    top: 0;
+    background: rgba(0, 0, 0, 0.25);
+    height: 100vh;
+    width: 100vw;
 }
 
 #post-success > h4 {
