--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,7 @@ nav {
     justify-items: center;
     align-items: center;
     width: 80%;
+    max-width: 300px;
     height: 400px;
     box-shadow: 4px 4px 6px 4px rgba(0, 0, 0, 0.25);
     margin: 20px;
