--- a/css/new-post.css
+++ b/css/new-post.css
@@ -11,8 +11,7 @@ h2 {
     margin-bottom: 40px;
 }
 
-#blog-post-form,
-#edit-form {
+#form {
     display: flex;
     flex-direction: column;
     margin: auto;
