--- a/css/browse.css
+++ b/css/browse.css
@@ -113,4 +113,34 @@ main {
     }
 }
 
+@media (max-width: 500px) {
+    .category-container {
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: repeat(2, auto);
+        grid-template-areas:
+        'wrap-1'
+        'wrap-2';
+    }
+
+    .wrap-1 {
+        grid-area: wrap-1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        padding: 10px;
+    }
+
+    .wrap-2 {
+        grid-area: wrap-2;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        padding: 10px;
+    }
+
+}
+
 
