--- a/css/new-post.css
+++ b/css/new-post.css
@@ -8,7 +8,7 @@ h2 {
     align-items: center;
     font-family: "Bebas Neue", sans-serif;
     font-size: 20px;
-    margin-bottom: 40px;
+    margin: 40px;
 }
 
 #form {
